--- a/default.conf
+++ b/default.conf
@@ -28,7 +28,7 @@ server {
     location / {
         # First attempt to serve request as file, then
         # as directory, then fall back to index.php
-        try_files $uri $uri/ /index.php?$query_string $uri/index.html;
+        try_files $uri $uri/ /index.php?$query_string $uri/index.html @return_404;
     }
 
     # redirect server error pages to the static page /50x.html
@@ -37,6 +37,9 @@ server {
     location = /50x.html {
         root   /usr/share/nginx/html;
     }
+	location @return_404 {
+		return 404;
+	}
 
     # pass the PHP scripts to FastCGI server listening on socket
     #
